flux/apps/kubernetes-dashboard/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-web
  namespace: kubernetes-dashboard
  annotations:
    switchboard.borchero.com/ignore: "all"
    external-dns.alpha.kubernetes.io/target: traefik.tartarus.us
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kubernetes-dashboard.tartarus.us`)
      kind: Rule
      services:
        - name: kubernetes-dashboard
          kind: Service
          port: 9090

  tls:
    secretName: letsencrypt-wildcard-cert-tartarus.us-prod
